# VTT-keyboard

./: .gitattributes  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  promo.md  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  StatusWindow.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: status_overlay.h  status_overlay_linux.c  status_overlay_macos.m  status_overlay_win.cpp
src-tauri/src/: aliyun_realtime.rs  audio_processing.rs  lib.rs  main.rs  openai.rs  paste.rs  processing.rs  recorder.rs  settings.rs  status_native.rs  transcription.rs  transcription_dispatcher.rs  triggers.rs  updater.rs  util.rs  volcengine.rs
src-tauri/src/sensevoice/: client.rs  docker_utils.rs  manager.rs  mod.rs  model.rs  native_runtime.rs  sherpa.rs  worker.rs
src-tauri/src/sensevoice/scripts/: Dockerfile  prepare.py  requirements.txt  server.py  vllm_entrypoint.sh
src-tauri/src/settings/: mod.rs  storage.rs  types.rs  validation.rs
src/components/: CustomSelect.tsx  DrawerNav.tsx  GreetingForm.tsx  HistoryDetailDialog.tsx  LanguageSwitcher.tsx  LogoRow.tsx  NumberWheelInput.tsx  PromptTemplateEditor.tsx  SegmentedControl.tsx  SettingsCard.tsx  Sidebar.tsx  TagInput.tsx  TitleBar.tsx  Tooltip.tsx
src/components/settings/: SpeechSettingsSection.tsx  TextProcessingSettingsSection.tsx
src/hooks/: useAutostart.ts  usePersistentBoolean.ts  useSenseVoice.ts  useSenseVoiceManagement.ts  useSettings.ts  useSettingsSync.ts  useShortcuts.ts  useUpdater.ts
src/i18n/: index.ts  languages.ts
src/i18n/locales/en/: translation.json
src/i18n/locales/zh-CN/: translation.json
src/styles/: tailwind.css
src/types/: history.ts  settings.ts  updater.ts
src/utils/: index.ts  provider.ts  sensevoice.ts
